Fix banner too wide
node/20481

--- a/docroot/sites/all/themes/blank/sass/screen.sass
+++ b/docroot/sites/all/themes/blank/sass/screen.sass
@@ -136,7 +136,6 @@ td
     margin-bottom: 10px
   .banner .panel-pane
     margin-bottom: 10px
-    width: 100%
     a
       font-weight: normal
       text-decoration: none
